# ASTRO

./: CMakeLists.txt  Wuthering Wave.lnk
injector/: CMakeLists.txt
injector/src/: RCa18008  common.hpp  main.cpp
injector/src/process/: process.hpp
src/: common.hpp  detour_hook.cpp  detour_hook.hpp  function_types.hpp  gui.cpp  gui.hpp  hooking.cpp  hooking.hpp  logger.cpp  logger.hpp  main.cpp  pointers.cpp  pointers.hpp  renderer.cpp  renderer.hpp  script.cpp  script_mgr.cpp  settings.cpp  settings.hpp
src/events/: main_event.cpp  main_event.hpp
src/hooks/: process_event.cpp  swapchain_hook.cpp  wndproc.cpp
src/memory/: pattern_batch.cpp
src/menu/: esp.cpp  esp.h  main_script.hpp  notification.cpp  overlay.cpp  overlay.h  player_menu.cpp  player_stats.cpp  setting_menu.cpp  submenu.hpp
src/server/: socket_client.hpp
src/server/alpha/: alpha_service.hpp
src/textures/: bnw_header.cpp  textures.hpp
src/ui/: ui_manager.cpp  ui_manager.hpp
src/utility/: misc.hpp  player.hpp  unreal_engine_utility.hpp
